--- a/templates/monorepo-astro-with-docs/packages/ui/src/components/button/Button.astro
+++ b/templates/monorepo-astro-with-docs/packages/ui/src/components/button/Button.astro
@@ -16,7 +16,7 @@
  *
  * @usage
  *
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { Button } from '@bejamas/ui/components/button';
  * ---
@@ -28,7 +28,7 @@
  *
  * You can use the `as` prop to render the component as an anchor.
  *
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { Button } from '@bejamas/ui/components/button';
  * ---
@@ -123,7 +123,7 @@ const buttonVariants = cva(
         destructive:
           "bg-destructive text-white shadow-xs hover:bg-destructive/90 focus-visible:ring-destructive/20 dark:focus-visible:ring-destructive/40 dark:bg-destructive/60",
         outline:
-          "border text-foreground shadow-xs hover:bg-accent hover:border-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50",
+          "border border-border bg-background hover:bg-muted hover:text-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 aria-expanded:bg-muted aria-expanded:text-foreground",
         secondary:
           "bg-secondary text-secondary-foreground hover:bg-secondary/80",
         ghost: "hover:bg-secondary",
@@ -132,10 +132,10 @@ const buttonVariants = cva(
       size: {
         default:
           "h-9 px-3 py-2 text-sm has-[.badge:last-child]:pr-1.5 has-[>svg]:px-2.5",
-        sm: "h-8.5 text-sm rounded-lg gap-1.5 px-3 has-[>svg]:px-2",
-        lg: "h-10 text-sm rounded-lg px-5 has-[>svg]:px-4 has-[.badge:last-child]:pr-3 [&_.badge:last-child]:ml-1.5",
+        sm: "h-8 text-xs rounded-lg gap-1.5 px-3 has-[>svg]:px-2",
+        lg: "h-10 text-base rounded-lg px-5 has-[>svg]:px-4 has-[.badge:last-child]:pr-3 [&_.badge:last-child]:ml-1.5",
         icon: "size-9",
-        "icon-sm": "size-8.5",
+        "icon-sm": "size-8",
         "icon-lg": "size-10",
       },
     },
