--- a/packages/starlight-theme-bejamas/src/overrides/ThemeSelect.astro
+++ b/packages/starlight-theme-bejamas/src/overrides/ThemeSelect.astro
@@ -1,9 +1,10 @@
 ---
 import {
   Select,
-  SelectControl,
-  SelectIndicator,
-  SelectOption,
+  SelectItem,
+  SelectTrigger,
+  SelectValue,
+  SelectContent,
 } from "virtual:starlight-theme-bejamas/components/select";
 
 import { SunIcon, MoonIcon, LaptopIcon } from "@lucide/astro";
@@ -16,22 +17,21 @@ import { SunIcon, MoonIcon, LaptopIcon } from "@lucide/astro";
       <MoonIcon class="theme-icon theme-icon-dark size-4" />
       <LaptopIcon class="theme-icon theme-icon-auto size-4" />
     </div>
-    <Select showCheckmark={false}>
-      <SelectIndicator />
-      <SelectControl
-        showCheckmark={false}
-        class="sl-bejamas-theme-select-control"
-      >
-        <SelectOption value="light"
-          ><SunIcon class="size-4" /> Light</SelectOption
+    <Select defaultValue="auto" id="starlight-theme-select">
+      <SelectTrigger class="sl-bejamas-theme-select-control">
+        <SelectValue placeholder="Theme" />
+      </SelectTrigger>
+      <SelectContent>
+        <SelectItem value="light" class="flex items-center gap-2"
+          ><SunIcon class="size-4" /> Light</SelectItem
         >
-        <SelectOption value="dark"
-          ><MoonIcon class="size-4" /> Dark</SelectOption
+        <SelectItem value="dark" class="flex items-center gap-2"
+          ><MoonIcon class="size-4" /> Dark</SelectItem
         >
-        <SelectOption value="auto"
-          ><LaptopIcon class="size-4" /> Auto</SelectOption
+        <SelectItem value="auto" class="flex items-center gap-2"
+          ><LaptopIcon class="size-4" /> Auto</SelectItem
         >
-      </SelectControl>
+      </SelectContent>
     </Select>
   </div>
 </starlight-theme-select>
@@ -81,9 +81,10 @@ import { SunIcon, MoonIcon, LaptopIcon } from "@lucide/astro";
     constructor() {
       super();
       onThemeChange(loadTheme());
-      this.querySelector("select")?.addEventListener("change", (e) => {
-        if (e.currentTarget instanceof HTMLSelectElement) {
-          onThemeChange(parseTheme(e.currentTarget.value));
+      const select = this.querySelector("#starlight-theme-select");
+      select?.addEventListener("select:change", (e) => {
+        if (e.detail.value) {
+          onThemeChange(parseTheme(e.detail.value));
         }
       });
     }
