--- a/packages/ui/src/components/spinner/Spinner.astro
+++ b/packages/ui/src/components/spinner/Spinner.astro
@@ -29,9 +29,9 @@
  *
  * You can replace the default spinner icon with any other icon by editing the `Spinner` component.
  *
- * ```astro showLineNumbers title="components/ui/spinner/Spinner.astro" nocollapse
+ * ```astro showLineNumbers title="components/ui/spinner/Spinner.astro" nocollapse nopreview
  * ---
- * import { cn } from "@/lib/utils";
+ * import { cn } from "@bejamas/ui/lib/utils";
  * import { Loader as LoaderIcon } from "@lucide/astro";
  *
  * const { class: className = "", ...props } = Astro.props;
